[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/GUI/StatusMeter.gd" type="Script" id=1]
[ext_resource path="res://assets/images/life_meter_front.png" type="Texture" id=2]
[ext_resource path="res://assets/images/life_meter_progress.png" type="Texture" id=3]
[ext_resource path="res://assets/images/life_meter_back.png" type="Texture" id=4]

[node name="StatusMeter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressUnder" type="TextureProgress" parent="."]
margin_right = 108.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressOver" type="TextureProgress" parent="."]
margin_right = 108.0
margin_bottom = 40.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
